# prisma

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  README_EN.md  client.example.toml  server.example.toml
crates/prisma-cli/: Cargo.toml
crates/prisma-cli/src/: api_client.rs  bandwidth.rs  clients.rs  completions.rs  config_ops.rs  connections.rs  console.rs  daemon.rs  diagnose.rs  diagnostics.rs  import.rs  init.rs  logs.rs  main.rs  metrics.rs  monitor.rs  profile_wizard.rs  status.rs  subscription.rs  validate.rs
crates/prisma-client/: Cargo.toml
crates/prisma-client/src/: connection_pool.rs  connector.rs  dns_resolver.rs  dns_server.rs  grpc_stream.rs  latency.rs  lib.rs  main.rs  pac.rs  proxy.rs  relay.rs  ssh_stream.rs  transport_selector.rs  tunnel.rs  wg_stream.rs  ws_stream.rs  xporta_stream.rs
crates/prisma-client/src/http/: server.rs
crates/prisma-client/src/socks5/: server.rs
crates/prisma-client/src/tun/: device.rs  handler.rs  mod.rs  process.rs  routing.rs  tcp_stack.rs
crates/prisma-client/tests/: integration.rs
crates/prisma-core/: Cargo.toml
crates/prisma-core/benches/: crypto_bench.rs  handshake_bench.rs  relay_bench.rs
crates/prisma-core/src/: acl.rs  auto_update.rs  buffer_pool.rs  cache.rs  entropy.rs  error.rs  fec.rs  lib.rs  logging.rs  mux.rs  permissions.rs  port_hop.rs  proxy_group.rs  rule_provider.rs  salamander.rs  state.rs  subscription.rs  traffic_shaping.rs  types.rs  util.rs  wireguard.rs
crates/prisma-core/src/bandwidth/: limiter.rs  mod.rs  quota.rs
crates/prisma-core/src/config/: client.rs  mod.rs  server.rs  validation.rs
crates/prisma-core/src/congestion/: adaptive.rs  brutal.rs  mod.rs
crates/prisma-core/src/crypto/: aead.rs  ecdh.rs  kdf.rs  mod.rs  padding.rs  pq_kem.rs  ticket_key_ring.rs
crates/prisma-core/src/dns/: fake_ip.rs
crates/prisma-core/tests/: config_tests.rs  integration.rs  protocol_proptest.proptest-regressions  protocol_proptest.rs
crates/prisma-ffi/: Cargo.toml
crates/prisma-ffi/include/: prisma_ffi.h
crates/prisma-ffi/src/: android.rs  auto_update.rs  connection.rs  ios.rs  lib.rs  qr.rs  runtime.rs  stats_poller.rs  system_proxy.rs
crates/prisma-ffi/tests/: ffi_boundary.rs
crates/prisma-mgmt/: Cargo.toml
crates/prisma-mgmt/src/: auth.rs  db.rs  lib.rs  openapi.json  router.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codec_frame_decode.rs  config_toml_parse.rs  handshake_decode.rs  uri_parse.rs
prisma-cli/: Cargo.toml
prisma-cli/src/: api_client.rs  console.rs  daemon.rs  dashboard.rs  diagnose.rs  diagnostics.rs  init.rs  main.rs  routes.rs  status.rs  validate.rs
prisma-client/: Cargo.toml
prisma-client/src/: connection_pool.rs  connector.rs  dns_resolver.rs  dns_server.rs  forward.rs  grpc_stream.rs  lib.rs  metrics.rs  proxy.rs  relay.rs  shadow_tls_stream.rs  transport_selector.rs  tunnel.rs  udp_relay.rs  ws_stream.rs  xhttp_stream.rs
prisma-client/src/http/: server.rs
prisma-client/src/socks5/: server.rs
prisma-client/src/tun/: device.rs  handler.rs  mod.rs  process.rs  tcp_stack.rs
prisma-client/tests/: integration.rs
prisma-core/: Cargo.toml
prisma-core/benches/: codec_bench.rs  crypto_bench.rs  handshake_bench.rs  relay_bench.rs
prisma-core/src/: buffer_pool.rs  entropy.rs  fec.rs  lib.rs  logging.rs  port_hop.rs  salamander.rs  shadow_tls.rs  state.rs  subscription.rs  traffic_shaping.rs  types.rs  util.rs
prisma-core/src/config/: client.rs  server.rs  validation.rs
prisma-core/src/congestion/: adaptive.rs  brutal.rs  mod.rs
prisma-core/src/crypto/: aead.rs  kdf.rs  mod.rs  padding.rs  pq_kem.rs  ticket_key_ring.rs
prisma-core/src/dns/: doh.rs  fake_ip.rs  mod.rs
prisma-core/src/geodata/: mod.rs  proto.rs
prisma-core/src/import/: mod.rs  shadowsocks.rs  vless.rs
prisma-core/src/prisma_auth/: beacon.rs
prisma-core/src/prisma_flow/: h2_mimicry.rs  timing.rs
prisma-core/src/prisma_fp/: builder.rs  grease.rs  ja3.rs
prisma-core/src/proto/: tunnel.rs
prisma-core/src/protocol/: anti_replay.rs  codec.rs  frame_encoder.rs  handshake.rs  mod.rs  types.rs
prisma-core/src/router/: mod.rs
prisma-core/src/utls/: fingerprints.rs  mod.rs
prisma-core/tests/: config_tests.rs  integration.rs  protocol_proptest.rs  protocol_snapshots.rs
prisma-core/tests/snapshots/: protocol_snapshots__client_hello_wire.snap  protocol_snapshots__client_init_v3_wire.snap  protocol_snapshots__data_frame_data_wire.snap  protocol_snapshots__data_frame_domain_connect_wire.snap  protocol_snapshots__prisma_client_init_wire.snap  protocol_snapshots__prisma_server_init_wire.snap  protocol_snapshots__server_accept_v2_wire.snap  protocol_snapshots__server_init_v3_wire.snap
prisma-ffi/: Cargo.toml
prisma-ffi/include/: prisma_ffi.h
prisma-ffi/src/: auto_update.rs  connection.rs  geo.rs  ios.rs  lib.rs  profiles.rs  qr.rs  runtime.rs  stats_poller.rs  system_proxy.rs
prisma-gui/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
prisma-gui/src-tauri/capabilities/: default.json  mobile.json
prisma-gui/src-tauri/icons/: icon.icns  tray-connecting.rgba  tray-off.rgba  tray-on.rgba
prisma-gui/src-tauri/src/: commands.rs  lib.rs  state.rs  tray.rs
prisma-mgmt/: Cargo.toml
prisma-mgmt/src/: auth.rs  lib.rs  router.rs
prisma-mgmt/src/handlers/: client_metrics.rs  clients.rs  config.rs  connections.rs  forwards.rs  health.rs  inbounds.rs  mod.rs  prometheus_export.rs  reload.rs  routes.rs
prisma-mgmt/src/ws/: logs.rs  metrics.rs
prisma-server/: Cargo.toml
prisma-server/src/: camouflage.rs  channel_stream.rs  compat_handler.rs  forward.rs  grpc_stream.rs  handler.rs  lib.rs  outbound.rs  relay.rs  relay_uring.rs  reload.rs  state.rs  udp_relay.rs  ws_stream.rs  xhttp_stream.rs
prisma-server/src/bandwidth/: limiter.rs  quota.rs
prisma-server/src/listener/: cdn.rs  grpc_tunnel.rs  h3_masquerade.rs  mod.rs  quic.rs  reality.rs  reverse_proxy.rs  shadowtls.rs  tcp.rs  wireguard.rs  ws_tunnel.rs  xhttp.rs  xporta.rs
prisma-server/tests/: integration.rs
scripts/: audit.sh  (+5 more)
(+743 files in other folders)
