[workspace]
members = ["crates/prisma-core", "crates/prisma-server", "crates/prisma-client", "crates/prisma-cli", "crates/prisma-mgmt", "crates/prisma-ffi"]
resolver = "2"

[workspace.package]
version = "2.29.0"
edition = "2021"
license = "GPLv3.0"

[workspace.dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# QUIC
quinn = "0.11"
quinn-proto = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"

tokio-rustls = "0.26"

# FEC
reed-solomon-erasure = "6"

# DNS
hickory-proto = "0.24"

# TUN device
smoltcp = { version = "0.12", default-features = false, features = ["alloc", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
wintun = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "poll", "zerocopy"] }

# Bandwidth management
governor = "0.8"

# Crypto
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = "0.2"
blake3 = "1"
hmac = "0.12"
sha2 = "0.10"
maxminddb = "0.24"
sha1 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
rand = "0.8"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cache
moka = { version = "0.12", features = ["future"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Middleware
tower = { version = "0.5", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Tables
comfy-table = "7"

# Async utilities
futures-util = "0.3"
tokio-stream = "0.1"

# Bytes
bytes = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# HTTPS server
axum-server = { version = "0.7", features = ["tls-rustls"] }

# HTTP types
http = "1"
http-body = "1"

# HTTP client (reverse proxy)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"

# HTTP/3
h3 = "0.0.8"
h3-quinn = "0.0.10"

# gRPC
tonic = "0.13"
prost = "0.13"
# Sync HTTP client (CLI)
ureq = { version = "3", features = ["json"] }

# Concurrent map
dashmap = "6"

# System info
sysinfo = "0.32"

# TLS cert parsing
x509-parser = "0.16"

# Text diffing
similar = "2"

# Archive extraction
flate2 = "1"
tar = "0.4"

# Browser opening
open = "5"

# Metrics
prometheus = "0.13"

# HTTP client (async)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }

# SSH transport
russh = "0.58"

# Dev
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tokio-test = "0.4"
rcgen = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

# File watching
notify = "7"

# FFI / GUI extras
semver = "1"
base64 = "0.22"
dirs = "5"
once_cell = "1"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
rqrr = "0.8"

# Interactive prompts
dialoguer = "0.11"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Terminal colors
colored = "2"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Misc
webpki-roots = "0.26"
hex = "0.4"
kem = "0.3.0-pre.0"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
