[package]
name = "prisma-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prisma"
path = "src/main.rs"

[dependencies]
prisma-core = { path = "../prisma-core" }
prisma-server = { path = "../prisma-server" }
prisma-client = { path = "../prisma-client" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
toml = { workspace = true }
