[package]
name = "prisma-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
ml-kem = { workspace = true }
kem = "0.3.0-pre.0"
blake3 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
moka = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reed-solomon-erasure = { workspace = true }
hickory-proto = { workspace = true }
bytes = { workspace = true }
subtle = "2"
prost = { workspace = true }
tonic = { workspace = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
webpki-roots = "0.26"
hex = "0.4"
governor = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
