[package]
name = "prisma-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
prisma-client = { path = "../prisma-client" }
prisma-core = { path = "../prisma-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
qrcode = "0.14"
ureq = { workspace = true }
semver = "1"
base64 = "0.22"
dirs = "5"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio-test = { workspace = true }
