[package]
name = "prisma-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
prisma-client = { path = "../prisma-client" }
prisma-core = { path = "../prisma-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
qrcode = "0.14"
toml = { workspace = true }
ureq = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
semver = "1"
base64 = "0.22"
dirs = "5"
once_cell = "1"
rustls = { workspace = true }

[features]
default = []
android = ["jni"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
