[package]
name = "prisma-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prisma-core = { path = "../prisma-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
subtle = "2"
