[package]
name = "prisma-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prisma-core = { path = "../prisma-core" }
prisma-mgmt = { path = "../prisma-mgmt", default-features = false }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-rustls = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
governor = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
nix = { workspace = true }

[features]
default = ["sysinfo"]
sysinfo = ["prisma-mgmt/sysinfo"]

[dev-dependencies]
tokio-test = { workspace = true }
