[package]
name = "prisma-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prisma"
path = "src/main.rs"

[dependencies]
prisma-core = { path = "../prisma-core" }
prisma-server = { path = "../prisma-server", default-features = false }
prisma-client = { path = "../prisma-client" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
toml = { workspace = true }
clap_complete = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = { workspace = true }
x509-parser = { workspace = true }
libc = { workspace = true }
comfy-table = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
open = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dialoguer = { workspace = true }
hex = { workspace = true }
colored = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[features]
default = ["sysinfo"]
sysinfo = ["prisma-server/sysinfo"]
