[package]
name = "prisma-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
ml-kem = { workspace = true }
kem = { workspace = true }
blake3 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
sha3 = { workspace = true }
md-5 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
moka = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reed-solomon-erasure = { workspace = true }
hickory-proto = { workspace = true }
bytes = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
webpki-roots = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
ureq = { workspace = true }
semver = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "handshake_bench"
harness = false
