[package]
name = "prisma-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
prisma-client = { path = "../prisma-client" }
prisma-core = { path = "../prisma-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rqrr = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
rustls = { workspace = true }

[features]
default = []
android = ["jni"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
