[package]
name = "prisma-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prisma-core = { path = "../prisma-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
sysinfo = { workspace = true, optional = true }
x509-parser = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
axum-server = { workspace = true }
prometheus = { workspace = true }
base64 = { workspace = true }
qrcode = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }

[features]
default = ["sysinfo"]
