[workspace]

[package]
name = "prisma-gui"
version = "0.6.2"
edition = "2021"

[lib]
name = "prisma_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "prisma-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-os           = "2"
tauri-plugin-autostart    = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
prisma-ffi = { path = "../../prisma-ffi" }
